// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardService should find all cards in a set 1`] = `
[
  {
    "artist": "artist",
    "id": 1,
    "imgSrc": "https://cards.scryfall.io/small/front/1/a/1abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 1,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "1",
      "w",
    ],
    "name": "Test Card Name 1",
    "number": "1",
    "oracleText": "Test card text.",
    "prices": [
      {
        "cardId": 1,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "10.00",
        "normal": "5.00",
      },
      {
        "cardId": 1,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "11.00",
        "normal": "6.00",
      },
      {
        "cardId": 1,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "12.00",
        "normal": "7.00",
      },
    ],
    "rarity": "common",
    "set": {
      "baseSize": 3,
      "cards": [],
      "code": "SET",
      "keyruneCode": "set",
      "name": "Test Set",
      "releaseDate": "2022-01-01",
      "type": "expansion",
      "url": "/set/set",
    },
    "setCode": "SET",
    "type": undefined,
    "url": "/card/set/1",
    "uuid": undefined,
  },
  {
    "artist": "artist",
    "id": 2,
    "imgSrc": "https://cards.scryfall.io/small/front/2/a/2abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 2,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "2",
      "w",
    ],
    "name": "Test Card Name 2",
    "number": "2",
    "oracleText": "Test card text.",
    "prices": [
      {
        "cardId": 2,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "10.00",
        "normal": "5.00",
      },
      {
        "cardId": 2,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "11.00",
        "normal": "6.00",
      },
      {
        "cardId": 2,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "12.00",
        "normal": "7.00",
      },
    ],
    "rarity": "uncommon",
    "set": {
      "baseSize": 3,
      "cards": [],
      "code": "SET",
      "keyruneCode": "set",
      "name": "Test Set",
      "releaseDate": "2022-01-01",
      "type": "expansion",
      "url": "/set/set",
    },
    "setCode": "SET",
    "type": undefined,
    "url": "/card/set/2",
    "uuid": undefined,
  },
  {
    "artist": "artist",
    "id": 3,
    "imgSrc": "https://cards.scryfall.io/small/front/3/a/3abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 3,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "3",
      "w",
    ],
    "name": "Test Card Name 3",
    "number": "3",
    "oracleText": "Test card text.",
    "prices": [
      {
        "cardId": 3,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "10.00",
        "normal": "5.00",
      },
      {
        "cardId": 3,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "11.00",
        "normal": "6.00",
      },
      {
        "cardId": 3,
        "date": 2022-01-01T00:00:00.000Z,
        "foil": "12.00",
        "normal": "7.00",
      },
    ],
    "rarity": "common",
    "set": {
      "baseSize": 3,
      "cards": [],
      "code": "SET",
      "keyruneCode": "set",
      "name": "Test Set",
      "releaseDate": "2022-01-01",
      "type": "expansion",
      "url": "/set/set",
    },
    "setCode": "SET",
    "type": undefined,
    "url": "/card/set/3",
    "uuid": undefined,
  },
]
`;

exports[`CardService should save legalities and delete previously saved legalities not given 1`] = `
[
  {
    "artist": undefined,
    "id": 1,
    "imgSrc": "https://cards.scryfall.io/small/front/imgSrc",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 1,
        "format": "legacy",
        "status": "legal",
      },
    ],
    "manaCost": null,
    "name": "Card 1",
    "number": "1",
    "oracleText": undefined,
    "prices": [],
    "rarity": "common",
    "set": null,
    "setCode": "SET",
    "type": "type",
    "url": "/card/set/1",
    "uuid": "uuid-123",
  },
]
`;

exports[`CardService should save new cards and return saved cards 1`] = `
[
  {
    "artist": "artist",
    "id": 1,
    "imgSrc": "https://cards.scryfall.io/small/front/1/a/1abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 1,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "1",
      "w",
    ],
    "name": "Test Card Name 1",
    "number": "1",
    "oracleText": "Test card text.",
    "prices": [],
    "rarity": "common",
    "set": null,
    "setCode": "SET",
    "type": "type",
    "url": "/card/set/1",
    "uuid": "abcd-1234-efgh-5678-ijkl-SET1",
  },
  {
    "artist": "artist",
    "id": 2,
    "imgSrc": "https://cards.scryfall.io/small/front/2/a/2abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 2,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "2",
      "w",
    ],
    "name": "Test Card Name 2",
    "number": "2",
    "oracleText": "Test card text.",
    "prices": [],
    "rarity": "uncommon",
    "set": null,
    "setCode": "SET",
    "type": "type",
    "url": "/card/set/2",
    "uuid": "abcd-1234-efgh-5678-ijkl-SET2",
  },
  {
    "artist": "artist",
    "id": 3,
    "imgSrc": "https://cards.scryfall.io/small/front/3/a/3abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 3,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "3",
      "w",
    ],
    "name": "Test Card Name 3",
    "number": "3",
    "oracleText": "Test card text.",
    "prices": [],
    "rarity": "common",
    "set": null,
    "setCode": "SET",
    "type": "type",
    "url": "/card/set/3",
    "uuid": "abcd-1234-efgh-5678-ijkl-SET3",
  },
]
`;

exports[`CardService should update existing cards and return saved cards 1`] = `
[
  {
    "artist": "artist",
    "id": 1,
    "imgSrc": "https://cards.scryfall.io/small/front/1/a/1abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 1,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 1,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "1",
      "w",
    ],
    "name": "Test Card Name 1",
    "number": "1",
    "oracleText": "Test card text.",
    "prices": [],
    "rarity": "common",
    "set": null,
    "setCode": "SET",
    "type": "type",
    "url": "/card/set/1",
    "uuid": "abcd-1234-efgh-5678-ijkl-SET1",
  },
  {
    "artist": "artist",
    "id": 2,
    "imgSrc": "https://cards.scryfall.io/small/front/2/a/2abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 2,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 2,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "2",
      "w",
    ],
    "name": "Test Card Name 2",
    "number": "2",
    "oracleText": "Test card text.",
    "prices": [],
    "rarity": "uncommon",
    "set": null,
    "setCode": "SET",
    "type": "type",
    "url": "/card/set/2",
    "uuid": "abcd-1234-efgh-5678-ijkl-SET2",
  },
  {
    "artist": "artist",
    "id": 3,
    "imgSrc": "https://cards.scryfall.io/small/front/3/a/3abc123def456.jpg",
    "isReserved": false,
    "legalities": [
      {
        "cardId": 3,
        "format": "standard",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "commander",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "modern",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "legacy",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "vintage",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "brawl",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "explorer",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "historic",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "oathbreaker",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "pauper",
        "status": "legal",
      },
      {
        "cardId": 3,
        "format": "pioneer",
        "status": "legal",
      },
    ],
    "manaCost": [
      "3",
      "w",
    ],
    "name": "Test Card Name 3",
    "number": "3",
    "oracleText": "Test card text.",
    "prices": [],
    "rarity": "common",
    "set": null,
    "setCode": "SET",
    "type": "type",
    "url": "/card/set/3",
    "uuid": "abcd-1234-efgh-5678-ijkl-SET3",
  },
]
`;
